# solana-accounts-observer

./: Cargo.toml  Readme.md
src/: main.rs
